--- a/resources/assets/sass/partials/buttons.scss
+++ b/resources/assets/sass/partials/buttons.scss
@@ -78,8 +78,8 @@
 
 .icon--back{
 	fill: $color2;
-	width: 3rem;
-	height: auto;
+	width: 30px;
+	height: 30px;
 	:hover {
 		fill: darken( $color2, 10% );
 	}
